Changed Create form placeholders.

--- a/views/create.handlebars
+++ b/views/create.handlebars
@@ -20,22 +20,24 @@
 
   <div class="container">
     <h1>Create a Project</h1>
+    &nbsp;
+    
     <form id="addNewProject" role="form" method="get" action="/add">
       <div class="form-group">
-        <label for="name" class="standardText">Name</label>
-        <input type="text" class="form-control standardText" id="name" placeholder="Name" name="name">
+        <label for="name" class="standardText">Project Title</label>
+        <input type="text" class="form-control standardText" id="name" placeholder="Project Title" name="name">
       </div>
       <div class="form-group">
         <label for="imageurl" class="standardText">Image URL</label>
         <input type="text" class="form-control standardText" id="imageurl" placeholder="Image URL" name="imageurl">
       </div>
       <div class="form-group">
-        <label for="summary" class="standardText">Summary</label>
-        <input type="text" class="form-control standardText" id="summary" placeholder="Summary" name="summary">
+        <label for="summary" class="standardText">Mission Statement</label>
+        <input type="text" class="form-control standardText" id="summary" placeholder="Mission Statement" name="summary">
       </div>
       <div class="form-group">
-        <label for="description" class="standardText">Description:</label>
-        <input type="text" class="form-control standardText" id="description" placeholder="Description" name="description">
+        <label for="description" class="standardText">Project Description</label>
+        <input type="text" class="form-control standardText" id="description" placeholder="Project Description" name="description">
       </div>
       <div>
         <input type="submit" id="submitBtn" class="btn btn-default standardText center-block" value="Add project"></input>
