--- a/views/project.handlebars
+++ b/views/project.handlebars
@@ -20,7 +20,7 @@
 
 	<div class="container">		
 		<div class="project">
-			<h2><strong>{{projectName}}</strong></h2>
+			<h2>{{projectName}}</h2>
 			&nbsp;
 			<img src="{{projectImgUrl}}" class="img-responsive img-rounded">
 			<p style="margin-bottom:20px;"/></p>
