Added Projects to Discover

--- a/views/discover.handlebars
+++ b/views/discover.handlebars
@@ -32,7 +32,7 @@
         <ul class="list-group">
           {{#each trendingProjects}}
             <li class="list-group-item">
-              <a href="/project/trending/{{id}}" class="standardText appColor">{{name}}</a><span class="badge">{{progressStatus}}</span>
+              <a href="/project/trending/{{id}}" class="standardText">{{name}}</a><span class="badge" style="background-color: #008000">{{progressStatus}}</span>
             </li>
           {{/each}}
         </ul>
